deploy/whoami/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
            cpu: "1"
          requests:
            memory: 64Mi
            cpu: "0.2"
