deploy/whoami/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    # Required for Traefik to handle HTTPS requests
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - whoami.devops.crafteo.io
    secretName: crafteo-whoami-certificate
  rules:
  - host: whoami.devops.crafteo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
